--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.17.10",
